gfx/layers/composite/AsyncCompositionManager.h
@@ -30,7 +30,7 @@ class AutoResolveRefLayers;
 // Represents (affine) transforms that are calculated from a content view.
 struct ViewTransform {
   ViewTransform(LayerPoint aTranslation = LayerPoint(),
-                LayoutDeviceToScreenScale aScale = LayoutDeviceToScreenScale())
+                ParentLayerToScreenScale aScale = ParentLayerToScreenScale())
     : mTranslation(aTranslation)
     , mScale(aScale)
   {}
@@ -51,7 +51,7 @@ struct ViewTransform {
   }
 
   LayerPoint mTranslation;
-  LayoutDeviceToScreenScale mScale;
+  ParentLayerToScreenScale mScale;
 };
 
 /**
